target/generated-sources/antlr4/contacto/ylang/YLangParser.java
// Generated from contacto/ylang/YLangParser.g4 by ANTLR 4.13.2
package contacto.ylang;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class YLangParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		INDENT=1, DEDENT=2, NEWLINE=3, SECCION_ESTRUCTURAS=4, SECCION_FUNCIONES=5, 
		ESTRUCTURA=6, DEFINIR=7, SI=8, ENTONCES=9, SINO=10, CONTRARIO=11, ELEGIR=12, 
		CASO=13, SIEMPRE=14, ROMPER=15, PARA=16, MIENTRAS=17, HACER=18, CONTINUAR=19, 
		RETORNAR=20, IMPRIMIR=21, LEER=22, VERDADERO=23, FALSO=24, KW_ENTERO=25, 
		KW_FLOTANTE=26, KW_CARACTER=27, KW_CADENA=28, KW_BOOL=29, ARROW=30, PLUSPLUS=31, 
		MINUSMINUS=32, EQ=33, NEQ=34, AND=35, OR=36, PLUS=37, MINUS=38, STAR=39, 
		SLASH=40, ASSIGN=41, LT=42, GT=43, NOT=44, LPAREN=45, RPAREN=46, LBRACKET=47, 
		RBRACKET=48, LBRACE=49, RBRACE=50, COLON=51, COMMA=52, DOT=53, SEMI=54, 
		FLOTANTE_LITERAL=55, ENTERO_LITERAL=56, CARACTER_LITERAL=57, CADENA_LITERAL=58, 
		ID=59, LINE_COMMENT=60, BLOCK_COMMENT=61, SPACES=62, NEWLINE_RAW=63;
	public static final int
		RULE_programa = 0, RULE_seccionEstructuras = 1, RULE_seccionFunciones = 2, 
		RULE_estructura = 3, RULE_campoEstructura = 4, RULE_funcionDef = 5, RULE_parametros = 6, 
		RULE_parametro = 7, RULE_tipo = 8, RULE_tipoPrimitivo = 9, RULE_sentencia = 10, 
		RULE_declaracionVariable = 11, RULE_sentenciaExpresion = 12, RULE_sentenciaSi = 13, 
		RULE_bloqueIndentado = 14, RULE_sentenciaElegir = 15, RULE_casoElegir = 16, 
		RULE_casoSiempre = 17, RULE_literalCaso = 18, RULE_sentenciaPara = 19, 
		RULE_declaracionParaInit = 20, RULE_sentenciaMientras = 21, RULE_sentenciaHacerMientras = 22, 
		RULE_sentenciaRetornar = 23, RULE_sentenciaRomper = 24, RULE_sentenciaContinuar = 25, 
		RULE_expresion = 26, RULE_argumentos = 27;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "seccionEstructuras", "seccionFunciones", "estructura", "campoEstructura", 
			"funcionDef", "parametros", "parametro", "tipo", "tipoPrimitivo", "sentencia", 
			"declaracionVariable", "sentenciaExpresion", "sentenciaSi", "bloqueIndentado", 
			"sentenciaElegir", "casoElegir", "casoSiempre", "literalCaso", "sentenciaPara", 
			"declaracionParaInit", "sentenciaMientras", "sentenciaHacerMientras", 
			"sentenciaRetornar", "sentenciaRomper", "sentenciaContinuar", "expresion", 
			"argumentos"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, "'%estructuras'", "'%funciones'", "'estructura'", 
			"'definir'", "'si'", "'entonces'", "'sino'", "'contrario'", "'elegir'", 
			"'caso'", "'siempre'", "'romper'", "'para'", "'mientras'", "'hacer'", 
			"'continuar'", "'retornar'", "'imprimir'", "'leer'", "'verdadero'", "'falso'", 
			"'entero'", "'flotante'", "'caracter'", "'cadena'", "'bool'", "'->'", 
			"'++'", "'--'", "'=='", "'!='", "'&&'", "'||'", "'+'", "'-'", "'*'", 
			"'/'", "'='", "'<'", "'>'", "'!'", "'('", "')'", "'['", "']'", "'{'", 
			"'}'", "':'", "','", "'.'", "';'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "INDENT", "DEDENT", "NEWLINE", "SECCION_ESTRUCTURAS", "SECCION_FUNCIONES", 
			"ESTRUCTURA", "DEFINIR", "SI", "ENTONCES", "SINO", "CONTRARIO", "ELEGIR", 
			"CASO", "SIEMPRE", "ROMPER", "PARA", "MIENTRAS", "HACER", "CONTINUAR", 
			"RETORNAR", "IMPRIMIR", "LEER", "VERDADERO", "FALSO", "KW_ENTERO", "KW_FLOTANTE", 
			"KW_CARACTER", "KW_CADENA", "KW_BOOL", "ARROW", "PLUSPLUS", "MINUSMINUS", 
			"EQ", "NEQ", "AND", "OR", "PLUS", "MINUS", "STAR", "SLASH", "ASSIGN", 
			"LT", "GT", "NOT", "LPAREN", "RPAREN", "LBRACKET", "RBRACKET", "LBRACE", 
			"RBRACE", "COLON", "COMMA", "DOT", "SEMI", "FLOTANTE_LITERAL", "ENTERO_LITERAL", 
			"CARACTER_LITERAL", "CADENA_LITERAL", "ID", "LINE_COMMENT", "BLOCK_COMMENT", 
			"SPACES", "NEWLINE_RAW"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "YLangParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public YLangParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramaContext extends ParserRuleContext {
		public SeccionFuncionesContext seccionFunciones() {
			return getRuleContext(SeccionFuncionesContext.class,0);
		}
		public TerminalNode EOF() { return getToken(YLangParser.EOF, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(YLangParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(YLangParser.NEWLINE, i);
		}
		public SeccionEstructurasContext seccionEstructuras() {
			return getRuleContext(SeccionEstructurasContext.class,0);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YLangParserListener ) ((YLangParserListener)listener).enterPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YLangParserListener ) ((YLangParserListener)listener).exitPrograma(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(59);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE) {
				{
				{
				setState(56);
				match(NEWLINE);
				}
				}
				setState(61);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(63);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SECCION_ESTRUCTURAS) {
				{
				setState(62);
				seccionEstructuras();
				}
			}

			setState(65);
			seccionFunciones();
			setState(66);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SeccionEstructurasContext extends ParserRuleContext {
		public TerminalNode SECCION_ESTRUCTURAS() { return getToken(YLangParser.SECCION_ESTRUCTURAS, 0); }
		public TerminalNode NEWLINE() { return getToken(YLangParser.NEWLINE, 0); }
		public TerminalNode INDENT() { return getToken(YLangParser.INDENT, 0); }
		public TerminalNode DEDENT() { return getToken(YLangParser.DEDENT, 0); }
		public List<EstructuraContext> estructura() {
			return getRuleContexts(EstructuraContext.class);
		}
		public EstructuraContext estructura(int i) {
			return getRuleContext(EstructuraContext.class,i);
		}
		public SeccionEstructurasContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_seccionEstructuras; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YLangParserListener ) ((YLangParserListener)listener).enterSeccionEstructuras(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YLangParserListener ) ((YLangParserListener)listener).exitSeccionEstructuras(this);
		}
	}

	public final SeccionEstructurasContext seccionEstructuras() throws RecognitionException {
		SeccionEstructurasContext _localctx = new SeccionEstructurasContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_seccionEstructuras);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			match(SECCION_ESTRUCTURAS);
			setState(69);
			match(NEWLINE);
			setState(70);
			match(INDENT);
			setState(72); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(71);
				estructura();
				}
				}
				setState(74); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==ESTRUCTURA );
			setState(76);
			match(DEDENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SeccionFuncionesContext extends ParserRuleContext {
		public TerminalNode SECCION_FUNCIONES() { return getToken(YLangParser.SECCION_FUNCIONES, 0); }
		public TerminalNode NEWLINE() { return getToken(YLangParser.NEWLINE, 0); }
		public TerminalNode INDENT() { return getToken(YLangParser.INDENT, 0); }
		public TerminalNode DEDENT() { return getToken(YLangParser.DEDENT, 0); }
		public List<FuncionDefContext> funcionDef() {
			return getRuleContexts(FuncionDefContext.class);
		}
		public FuncionDefContext funcionDef(int i) {
			return getRuleContext(FuncionDefContext.class,i);
		}
		public SeccionFuncionesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_seccionFunciones; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YLangParserListener ) ((YLangParserListener)listener).enterSeccionFunciones(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YLangParserListener ) ((YLangParserListener)listener).exitSeccionFunciones(this);
		}
	}

	public final SeccionFuncionesContext seccionFunciones() throws RecognitionException {
		SeccionFuncionesContext _localctx = new SeccionFuncionesContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_seccionFunciones);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			match(SECCION_FUNCIONES);
			setState(79);
			match(NEWLINE);
			setState(80);
			match(INDENT);
			setState(82); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(81);
				funcionDef();
				}
				}
				setState(84); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==DEFINIR );
			setState(86);
			match(DEDENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class EstructuraContext extends ParserRuleContext {
		public TerminalNode ESTRUCTURA() { return getToken(YLangParser.ESTRUCTURA, 0); }
		public TerminalNode ID() { return getToken(YLangParser.ID, 0); }
		public TerminalNode COLON() { return getToken(YLangParser.COLON, 0); }
		public TerminalNode NEWLINE() { return getToken(YLangParser.NEWLINE, 0); }
		public TerminalNode INDENT() { return getToken(YLangParser.INDENT, 0); }
		public TerminalNode DEDENT() { return getToken(YLangParser.DEDENT, 0); }
		public List<CampoEstructuraContext> campoEstructura() {
			return getRuleContexts(CampoEstructuraContext.class);
		}
		public CampoEstructuraContext campoEstructura(int i) {
			return getRuleContext(CampoEstructuraContext.class,i);
		}
		public EstructuraContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_estructura; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YLangParserListener ) ((YLangParserListener)listener).enterEstructura(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YLangParserListener ) ((YLangParserListener)listener).exitEstructura(this);
		}
	}

	public final EstructuraContext estructura() throws RecognitionException {
		EstructuraContext _localctx = new EstructuraContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_estructura);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			match(ESTRUCTURA);
			setState(89);
			match(ID);
			setState(90);
			match(COLON);
			setState(91);
			match(NEWLINE);
			setState(92);
			match(INDENT);
			setState(94); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(93);
				campoEstructura();
				}
				}
				setState(96); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 576460753343610880L) != 0) );
			setState(98);
			match(DEDENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CampoEstructuraContext extends ParserRuleContext {
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public TerminalNode ID() { return getToken(YLangParser.ID, 0); }
		public TerminalNode NEWLINE() { return getToken(YLangParser.NEWLINE, 0); }
		public TerminalNode LBRACKET() { return getToken(YLangParser.LBRACKET, 0); }
		public TerminalNode ENTERO_LITERAL() { return getToken(YLangParser.ENTERO_LITERAL, 0); }
		public TerminalNode RBRACKET() { return getToken(YLangParser.RBRACKET, 0); }
		public CampoEstructuraContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_campoEstructura; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YLangParserListener ) ((YLangParserListener)listener).enterCampoEstructura(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YLangParserListener ) ((YLangParserListener)listener).exitCampoEstructura(this);
		}
	}

	public final CampoEstructuraContext campoEstructura() throws RecognitionException {
		CampoEstructuraContext _localctx = new CampoEstructuraContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_campoEstructura);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			tipo();
			setState(101);
			match(ID);
			setState(105);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LBRACKET) {
				{
				setState(102);
				match(LBRACKET);
				setState(103);
				match(ENTERO_LITERAL);
				setState(104);
				match(RBRACKET);
				}
			}

			setState(107);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FuncionDefContext extends ParserRuleContext {
		public TerminalNode DEFINIR() { return getToken(YLangParser.DEFINIR, 0); }
		public TerminalNode ID() { return getToken(YLangParser.ID, 0); }
		public TerminalNode LPAREN() { return getToken(YLangParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(YLangParser.RPAREN, 0); }
		public TerminalNode COLON() { return getToken(YLangParser.COLON, 0); }
		public TerminalNode NEWLINE() { return getToken(YLangParser.NEWLINE, 0); }
		public TerminalNode INDENT() { return getToken(YLangParser.INDENT, 0); }
		public TerminalNode DEDENT() { return getToken(YLangParser.DEDENT, 0); }
		public ParametrosContext parametros() {
			return getRuleContext(ParametrosContext.class,0);
		}
		public TerminalNode ARROW() { return getToken(YLangParser.ARROW, 0); }
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public List<SentenciaContext> sentencia() {
			return getRuleContexts(SentenciaContext.class);
		}
		public SentenciaContext sentencia(int i) {
			return getRuleContext(SentenciaContext.class,i);
		}
		public FuncionDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcionDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YLangParserListener ) ((YLangParserListener)listener).enterFuncionDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YLangParserListener ) ((YLangParserListener)listener).exitFuncionDef(this);
		}
	}

	public final FuncionDefContext funcionDef() throws RecognitionException {
		FuncionDefContext _localctx = new FuncionDefContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_funcionDef);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			match(DEFINIR);
			setState(110);
			match(ID);
			setState(111);
			match(LPAREN);
			setState(113);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 576460753343610880L) != 0)) {
				{
				setState(112);
				parametros();
				}
			}

			setState(115);
			match(RPAREN);
			setState(118);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ARROW) {
				{
				setState(116);
				match(ARROW);
				setState(117);
				tipo();
				}
			}

			setState(120);
			match(COLON);
			setState(121);
			match(NEWLINE);
			setState(122);
			match(INDENT);
			setState(124); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(123);
				sentencia();
				}
				}
				setState(126); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 1117508716493508928L) != 0) );
			setState(128);
			match(DEDENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParametrosContext extends ParserRuleContext {
		public List<ParametroContext> parametro() {
			return getRuleContexts(ParametroContext.class);
		}
		public ParametroContext parametro(int i) {
			return getRuleContext(ParametroContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(YLangParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(YLangParser.COMMA, i);
		}
		public ParametrosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parametros; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YLangParserListener ) ((YLangParserListener)listener).enterParametros(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YLangParserListener ) ((YLangParserListener)listener).exitParametros(this);
		}
	}

	public final ParametrosContext parametros() throws RecognitionException {
		ParametrosContext _localctx = new ParametrosContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_parametros);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			parametro();
			setState(135);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(131);
				match(COMMA);
				setState(132);
				parametro();
				}
				}
				setState(137);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParametroContext extends ParserRuleContext {
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public TerminalNode ID() { return getToken(YLangParser.ID, 0); }
		public TerminalNode LBRACKET() { return getToken(YLangParser.LBRACKET, 0); }
		public TerminalNode RBRACKET() { return getToken(YLangParser.RBRACKET, 0); }
		public ParametroContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parametro; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YLangParserListener ) ((YLangParserListener)listener).enterParametro(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YLangParserListener ) ((YLangParserListener)listener).exitParametro(this);
		}
	}

	public final ParametroContext parametro() throws RecognitionException {
		ParametroContext _localctx = new ParametroContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_parametro);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
			tipo();
			setState(139);
			match(ID);
			setState(142);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LBRACKET) {
				{
				setState(140);
				match(LBRACKET);
				setState(141);
				match(RBRACKET);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TipoContext extends ParserRuleContext {
		public TipoPrimitivoContext tipoPrimitivo() {
			return getRuleContext(TipoPrimitivoContext.class,0);
		}
		public List<TerminalNode> LBRACKET() { return getTokens(YLangParser.LBRACKET); }
		public TerminalNode LBRACKET(int i) {
			return getToken(YLangParser.LBRACKET, i);
		}
		public List<TerminalNode> RBRACKET() { return getTokens(YLangParser.RBRACKET); }
		public TerminalNode RBRACKET(int i) {
			return getToken(YLangParser.RBRACKET, i);
		}
		public TerminalNode ID() { return getToken(YLangParser.ID, 0); }
		public TipoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YLangParserListener ) ((YLangParserListener)listener).enterTipo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YLangParserListener ) ((YLangParserListener)listener).exitTipo(this);
		}
	}

	public final TipoContext tipo() throws RecognitionException {
		TipoContext _localctx = new TipoContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_tipo);
		try {
			int _alt;
			setState(160);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case KW_ENTERO:
			case KW_FLOTANTE:
			case KW_CARACTER:
			case KW_CADENA:
			case KW_BOOL:
				enterOuterAlt(_localctx, 1);
				{
				setState(144);
				tipoPrimitivo();
				setState(149);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(145);
						match(LBRACKET);
						setState(146);
						match(RBRACKET);
						}
						} 
					}
					setState(151);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
				}
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 2);
				{
				setState(152);
				match(ID);
				setState(157);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(153);
						match(LBRACKET);
						setState(154);
						match(RBRACKET);
						}
						} 
					}
					setState(159);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
